<resources>
    <string name="app_name">Homie</string>
    <string name="app_logo">logo</string>
    <string name="app_signup">Sign Up</string>
    <string name="app_username">Username</string>
    <string name="app_password">Password</string>
    <string name="app_forgotPassword">Forgot Password?</string>
    <string name="app_signIn">Sign In</string>
    <string name="app_or">OR</string>
    <string name="app_email">Email</string>
    <string name="app_phone">Phone</string>
    <string name="app_confirmPassword">Confirm Password</string>
    <string name="cleaning">Cleaning</string>
    <string name="electrician">Electrician</string>
    <string name="plumbing">Plumbing</string>
    <string name="nanny">Baby Sitting</string>
    <string name="laundary">Laundary</string>
    <string name="app_menu">Menu</string>
    <string name="app_admin">Admin</string>
    <string name="app_ack">Acknowledgement</string>
    <string name="app_logOut">Log out</string>
    <string name="app_booking">Booking Form</string>
    <string name="name">Full Name</string>
    <string name="address">Address</string>
    <string name="pincode">Pin Code</string>
    <string name="req1">With our tools?</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="yes">Yes (extra charges will be applied)</string>
    <string name="no">No</string>
    <string name="pay">Pay Now</string>
    <string name="app_feedback">FeedBack</string>
    <string name="order_history">Order History</string>
    <string name="orders">Orders</string>
    <string name="feedbacks">FeedBacks</string>
    <string name="payment">Payment</string>
    <string name="card_name">Card Name</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvv">CVV</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="card_number">Card Number</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="rs_2000">Rs. 2000</string>
    <string name="home">Home</string>
    <string name="laundry"> Laundry </string>
    <string name="submit">Submit</string>
</resources>