<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.customer_dasboard">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
>   <View
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@xml/bg_dark_view"
        />
    <!-- <ImageView
        android:id="@+id/menuIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_menu"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/app_menu" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="#ffffffff"
        android:textSize="50sp"
        android:textStyle="bold"
        app:fontFamily="@font/baloo_tammudu" />

    <GridLayout
        android:layout_height="match_parent"
        android:layout_below="@+id/top_view"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-40dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cleaning"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/cleaning"
                    android:src="@drawable/cleaning6" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/cleaning"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/babySitting"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/nanny"
                    android:src="@drawable/nanny1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nanny"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/laundry"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/laundary"
                    android:src="@drawable/laundry1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/laundry"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/plumbing"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/plumbing"
                    android:src="@drawable/plumbing2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/plumbing"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/electrician"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/electrician"
                    android:src="@drawable/electrician1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/electrician"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
                 </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/feedBack"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_feedback"
                   android:src="@drawable/feedback1"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_feedback"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
       <!-- <androidx.cardview.widget.CardView
            android:id="@+id/orderHistory"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/order_history"
                    android:src="@drawable/history"
                     />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/order_history"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>-->
        <androidx.cardview.widget.CardView
            android:id="@+id/LogOut"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="12dp"
            app:cardCornerRadius="18dp"
            app:cardElevation="18dp">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/app_logOut"
                    android:src="@drawable/logout"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/app_logOut"
                    android:textColor="@color/primary"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>
   </RelativeLayout>
</ScrollView>

